--- a/frontend/src/pages/App/patients/Patients.module.css
+++ b/frontend/src/pages/App/patients/Patients.module.css
@@ -1,6 +1,5 @@
 .patientsBody{
     width: 100%;
-    height: 100%;
     padding: 2rem;
     display: flex;
     flex-direction: column;
